--- a/articles/efc351e426586d.md
+++ b/articles/efc351e426586d.md
@@ -79,7 +79,7 @@ https://go.dev/ref/spec#Defer_statements
 
 > Each time a "defer" statement executes, the function value and parameters to the call are evaluated as usual and saved anew but the actual function is not invoked. Instead, deferred functions are invoked immediately before the surrounding function returns, in the reverse order they were deferred. 
 
-> 拙訳: defer文が実行されるごとに、その関数値とその呼出しに対するパラメータは通常通りに評価され、改めて保存されますが、その実際の関数は実行されません。そうではなく、deferされた関数はそれを囲む関数がreturnする直前に、deferされたのと逆順で実行されます。
+> 拙訳: defer文が実行されるごとに、その関数値とその呼出しに対するパラメータは通常通りに評価され、改めて保存されますが、その実際の関数は実行されません。deferされた関数はそれを囲む関数がreturnする直前に、deferされたのと逆順で実行されます。
 
 つまり、
 
