--- a/articles/efc351e426586d.md
+++ b/articles/efc351e426586d.md
@@ -3,7 +3,7 @@ title: "[Go Quiz] 解説: Defer quiz"
 emoji: "😽"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: [Go]
-published: false
+published: true
 ---
 
 
