--- a/articles/efc351e426586d.md
+++ b/articles/efc351e426586d.md
@@ -1,7 +1,7 @@
 ---
 title: "[Go Quiz] 解説: Defer quiz"
 emoji: "😽"
-type: "tech" # tech: 技術記事 / idea: アイデア
+type: "idea" # tech: 技術記事 / idea: アイデア
 topics: [Go]
 published: true
 ---
