--- a/articles/goquiz_20230817.md
+++ b/articles/goquiz_20230817.md
@@ -8,6 +8,19 @@ published: false
 
 この記事の目的は、次のGoのコードがコンパイルできるか？という問題を[Goの言語仕様書](https://go.dev/ref/spec)に基づいて解説することです。
 
+```go
+package main
+
+func main() {}
+
+func F[T int]() T {
+	x := 1
+	var t T
+	t = x
+	return t
+}
+```
+
 「自分の抱いた疑問への答えが仕様書のどこに書いてあるか」をすぐ探せる人はGoユーザーの多数派ではないと思いますが、その参考例になればと思って書きました。
 
 https://twitter.com/shino_nobishii/status/1691806583594930568?s=20
@@ -16,7 +29,7 @@ https://twitter.com/shino_nobishii/status/1691806583594930568?s=20
 
 自分でクイズの答えを考えたい人もいると思うので、結論は記事の最後に書きます。
 
-# クイズの内容
+# クイズの内容(再掲)
 
 次のコードはコンパイルできるでしょうか？
 
