--- a/articles/goquiz_20230817.md
+++ b/articles/goquiz_20230817.md
@@ -62,7 +62,8 @@ func main() {} // 何もしないmain関数
 // intという型制約(type constraing)を持つ型パラメータTを持つ関数Fを定義する。戻り値の型はT
 // 型制約intはinterface { int } と同じ意味で、intによってのみ満たされる型制約を意味する。
 func F[T int]() T { 
-	x := 1 // xを短縮変数宣言(short variable declaration)する。右辺はuntyped constantの1なのでそのdefault typeであるintがxの型となる。
+    // xを短縮変数宣言(short variable declaration)する。
+	x := 1 // 右辺はuntyped constantの1なのでそのdefault typeであるintがxの型となる。
 	var t T // T型の変数を宣言する。
 	t = x // 変数tに変数xを代入する文(assingment statement)
 	return t // tをreturnする文(return statement)
