--- a/articles/goquiz_20230817.md
+++ b/articles/goquiz_20230817.md
@@ -1,5 +1,5 @@
 ---
-title: "[Go Quiz] 単一の型のみによる型制約を持つ型パラメータにその型の変数を代入できるか"
+title: "[Go Quiz] 単一の型のみによる型制約を持つ型パラメータを型に持つ変数にその型の変数を代入できるか"
 emoji: "🐈"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: [Go]
@@ -222,7 +222,7 @@ https://go.dev/play/p/i5UAGjIntwU
 
 # クイズから得られる知識を一言でまとめる
 
-単一の型のみによる型制約を持つ型パラメータにその型の変数を代入できるのは、その型がnamed typeではないときであり、またそのときに限る。
+単一の型のみによる型制約を持つ型パラメータを型に持つ変数に、その単一の型の変数を代入できるのは、その型がnamed typeではないときであり、またそのときに限る。
 
 # 結論
 
