--- a/articles/goquiz_20230817.md
+++ b/articles/goquiz_20230817.md
@@ -29,6 +29,10 @@ https://twitter.com/shino_nobishii/status/1691806583594930568?s=20
 
 自分でクイズの答えを考えたい人もいると思うので、結論は記事の最後に書きます。
 
+以下、Go1.21の言語仕様書(Version of Aug 2, 2023)に基づいて解説します。
+
+https://go.dev/ref/spec
+
 # クイズの内容(再掲)
 
 次のコードはコンパイルできるでしょうか？
